password box blocked

--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,26 @@
             <label for="password">Enter Password:</label>
             <input type="password" id="password" name="password">
             <button type="submit">Submit</button>
+            <style>  body {
+                display: block;
+                justify-content: center;
+                align-items: center;
+            }
+    
+            .container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+    
+            .password-input {
+                width: 100%;
+                padding: 10px;
+                font-size: 16px;
+                border: 1px solid #ccc;
+                border-radius: 5px;
+            }
+        </style></style>
         </form>
         <table id="adminTable" style="display: none;">
             <thead>
