password box update

--- a/admin.html
+++ b/admin.html
@@ -34,7 +34,7 @@
                 border: 1px solid #ccc;
                 border-radius: 5px;
             }
-        </style></style>
+        </style>
         </form>
         <table id="adminTable" style="display: none;">
             <thead>
