--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="admin.html">Admin</a></li>
+            <li><a href="admin.html">nav</a></li>
         </ul>
     </nav>
     <main>
